parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOLEAN_CTE
    CALL
    COLON
    NOTEQUAL
    READ
    THREEDOTS

Grammar

Rule 0     S' -> calc
Rule 1     calc -> PROGRAMA ID seen_program SEMICOLON vars modulesaux functionmain
Rule 2     modulesaux -> function modulesaux
Rule 3     modulesaux -> <empty>
Rule 4     seen_program -> <empty>
Rule 5     vars -> VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars
Rule 6     vars -> empty
Rule 7     varsAuxDeclaration -> idOrArrayDeclaration seen_end_declaration COMMA varsAuxDeclaration
Rule 8     varsAuxDeclaration -> idOrArrayDeclaration seen_end_declaration
Rule 9     seen_end_declaration -> <empty>
Rule 10    idOrArrayDeclaration -> ID seen_ID_var
Rule 11    idOrArrayDeclaration -> ID seen_ID_var LEFTBRACKET seen_lBracket_array arrayDimesionAux RIGHTBRACKET seen_rBracket_array
Rule 12    arrayAccesing -> ID seen_ID LEFTBRACKET seen_initArrayAccesing arrayAccesingExpresionAux RIGHTBRACKET seen_endArrayAccesing
Rule 13    arrayAccesingExpresionAux -> expresion seen_expresion_array
Rule 14    arrayAccesingExpresionAux -> expresion seen_expresion_array COMMA seen_commaAccesingExpresion arrayAccesingExpresionAux
Rule 15    seen_initArrayAccesing -> <empty>
Rule 16    seen_expresion_array -> <empty>
Rule 17    seen_commaAccesingExpresion -> <empty>
Rule 18    seen_endArrayAccesing -> <empty>
Rule 19    arrayDimesionAux -> INT_CTE seen_lim_inf INT_CTE seen_lim_sup
Rule 20    arrayDimesionAux -> INT_CTE seen_lim_inf INT_CTE seen_lim_sup COMMA seen_extra_dimension_array arrayDimesionAux
Rule 21    seen_extra_dimension_array -> <empty>
Rule 22    seen_lim_inf -> <empty>
Rule 23    seen_lim_sup -> <empty>
Rule 24    seen_lBracket_array -> <empty>
Rule 25    seen_rBracket_array -> <empty>
Rule 26    seen_vars -> <empty>
Rule 27    varsaux -> COMMA ID seen_ID_var varsaux
Rule 28    varsaux -> <empty>
Rule 29    seen_ID_var -> <empty>
Rule 30    tipo -> INT seen_tipo
Rule 31    tipo -> FLOAT seen_tipo
Rule 32    tipo -> BOOLEAN seen_tipo
Rule 33    seen_tipo -> <empty>
Rule 34    function -> FUNCTION returnfunctionaux ID seen_id_function params bloque seen_function_end
Rule 35    seen_id_function -> <empty>
Rule 36    seen_function_end -> <empty>
Rule 37    functionmain -> MAIN seen_function_main LEFTPARENTHESES RIGHTPARENTHESES bloque seen_end_program
Rule 38    seen_end_program -> <empty>
Rule 39    seen_function_main -> <empty>
Rule 40    returnfunctionaux -> tipo
Rule 41    returnfunctionaux -> VOID seen_void
Rule 42    seen_void -> <empty>
Rule 43    params -> LEFTPARENTHESES seen_params_init paramsaux RIGHTPARENTHESES
Rule 44    seen_params_init -> <empty>
Rule 45    paramsaux -> tipo ID seen_ID_params paramsaux
Rule 46    paramsaux -> COMMA paramsaux
Rule 47    paramsaux -> empty
Rule 48    seen_ID_params -> <empty>
Rule 49    bloque -> LEFTBRACE seen_start_bloqueaux vars bloqueaux returnaux RIGHTBRACE
Rule 50    returnaux -> RETURN expresion seen_return_function SEMICOLON
Rule 51    returnaux -> <empty>
Rule 52    seen_return_function -> <empty>
Rule 53    seen_start_bloqueaux -> <empty>
Rule 54    bloqueaux -> estatuto bloqueaux
Rule 55    bloqueaux -> <empty>
Rule 56    estatuto -> asignacion
Rule 57    estatuto -> condicion
Rule 58    estatuto -> escritura
Rule 59    estatuto -> while
Rule 60    estatuto -> functionCall SEMICOLON
Rule 61    asignacion -> varcte ASIGNATION seen_equals expresion seen_final_asignacion SEMICOLON
Rule 62    seen_equals -> <empty>
Rule 63    seen_final_asignacion -> <empty>
Rule 64    expresion -> exp seen_comparacion
Rule 65    expresion -> exp seen_comparacion expresionaux exp seen_comparacion
Rule 66    expresionaux -> GREATERTHAN seen_operador
Rule 67    expresionaux -> LESSTHAN seen_operador
Rule 68    expresionaux -> LESSTHANOREQUALS seen_operador
Rule 69    expresionaux -> NOTEQUALS seen_operador
Rule 70    expresionaux -> EQUALS seen_operador
Rule 71    expresionaux -> <empty>
Rule 72    escritura -> PRINT LEFTPARENTHESES escrituraaux RIGHTPARENTHESES SEMICOLON
Rule 73    escrituraaux -> escrituraaux2
Rule 74    escrituraaux -> escrituraaux2 COMMA escrituraaux
Rule 75    escrituraaux2 -> expresion seen_print_cuadruplo
Rule 76    escrituraaux2 -> STRING_CTE seen_print_cuadruplo
Rule 77    seen_print_cuadruplo -> <empty>
Rule 78    exp -> termino seen_termino
Rule 79    exp -> termino seen_termino expaux
Rule 80    expaux -> PLUS seen_operador exp
Rule 81    expaux -> MINUS seen_operador exp
Rule 82    termino -> factor seen_factor
Rule 83    termino -> factor seen_factor terminoaux
Rule 84    terminoaux -> DIVIDE seen_operador termino
Rule 85    terminoaux -> MULTIPLY seen_operador termino
Rule 86    condicion -> IF LEFTPARENTHESES expresion RIGHTPARENTHESES seen_right_parentheses_condicion bloque condicionaux
Rule 87    condicionaux -> ELSE seen_else bloque SEMICOLON seen_end_condicion
Rule 88    condicionaux -> SEMICOLON seen_end_condicion
Rule 89    seen_right_parentheses_condicion -> <empty>
Rule 90    seen_else -> <empty>
Rule 91    seen_end_condicion -> <empty>
Rule 92    factor -> factoraux
Rule 93    factor -> varcte
Rule 94    factoraux -> LEFTPARENTHESES seen_insert_fondo expresion RIGHTPARENTHESES seen_remove_fondo
Rule 95    varcte -> ID seen_ID
Rule 96    varcte -> INT_CTE seen_CTE_INT
Rule 97    varcte -> FLOAT_CTE seen_CTE_FLOAT
Rule 98    varcte -> functionCall
Rule 99    varcte -> arrayAccesing
Rule 100   seen_CTE_INT -> <empty>
Rule 101   seen_CTE_FLOAT -> <empty>
Rule 102   seen_insert_fondo -> <empty>
Rule 103   seen_remove_fondo -> <empty>
Rule 104   seen_ID -> <empty>
Rule 105   seen_operador -> <empty>
Rule 106   seen_termino -> <empty>
Rule 107   seen_factor -> <empty>
Rule 108   seen_comparacion -> <empty>
Rule 109   while -> WHILE seen_while LEFTPARENTHESES expresion RIGHTPARENTHESES seen_right_parentheses_while bloque SEMICOLON seen_end_while
Rule 110   seen_while -> <empty>
Rule 111   seen_right_parentheses_while -> <empty>
Rule 112   seen_end_while -> <empty>
Rule 113   functionCall -> AT ID seen_fCall_id LEFTPARENTHESES seen_leftp_fCall paramsFunctionCall seen_end_paramsFCall RIGHTPARENTHESES seen_rightp_fCall
Rule 114   seen_fCall_id -> <empty>
Rule 115   seen_leftp_fCall -> <empty>
Rule 116   paramsFunctionCall -> expresion seen_parameter_fCall COMMA seen_comma_params_fCall paramsFunctionCall
Rule 117   paramsFunctionCall -> expresion seen_parameter_fCall seen_comma_params_fCall
Rule 118   seen_parameter_fCall -> <empty>
Rule 119   seen_comma_params_fCall -> <empty>
Rule 120   seen_end_paramsFCall -> <empty>
Rule 121   seen_rightp_fCall -> <empty>
Rule 122   empty -> <empty>

Terminals, with rules where they appear

ASIGNATION           : 61
AT                   : 113
BOOLEAN              : 32
BOOLEAN_CTE          : 
CALL                 : 
COLON                : 
COMMA                : 7 14 20 27 46 74 116
DIVIDE               : 84
ELSE                 : 87
EQUALS               : 70
FLOAT                : 31
FLOAT_CTE            : 97
FUNCTION             : 34
GREATERTHAN          : 66
ID                   : 1 10 11 12 27 34 45 95 113
IF                   : 86
INT                  : 30
INT_CTE              : 19 19 20 20 96
LEFTBRACE            : 49
LEFTBRACKET          : 11 12
LEFTPARENTHESES      : 37 43 72 86 94 109 113
LESSTHAN             : 67
LESSTHANOREQUALS     : 68
MAIN                 : 37
MINUS                : 81
MULTIPLY             : 85
NOTEQUAL             : 
NOTEQUALS            : 69
PLUS                 : 80
PRINT                : 72
PROGRAMA             : 1
READ                 : 
RETURN               : 50
RIGHTBRACE           : 49
RIGHTBRACKET         : 11 12
RIGHTPARENTHESES     : 37 43 72 86 94 109 113
SEMICOLON            : 1 5 50 60 61 72 87 88 109
STRING_CTE           : 76
THREEDOTS            : 
VAR                  : 5
VOID                 : 41
WHILE                : 109
error                : 

Nonterminals, with rules where they appear

arrayAccesing        : 99
arrayAccesingExpresionAux : 12 14
arrayDimesionAux     : 11 20
asignacion           : 56
bloque               : 34 37 86 87 109
bloqueaux            : 49 54
calc                 : 0
condicion            : 57
condicionaux         : 86
empty                : 6 47
escritura            : 58
escrituraaux         : 72 74
escrituraaux2        : 73 74
estatuto             : 54
exp                  : 64 65 65 80 81
expaux               : 79
expresion            : 13 14 50 61 75 86 94 109 116 117
expresionaux         : 65
factor               : 82 83
factoraux            : 92
function             : 2
functionCall         : 60 98
functionmain         : 1
idOrArrayDeclaration : 7 8
modulesaux           : 1 2
params               : 34
paramsFunctionCall   : 113 116
paramsaux            : 43 45 46
returnaux            : 49
returnfunctionaux    : 34
seen_CTE_FLOAT       : 97
seen_CTE_INT         : 96
seen_ID              : 12 95
seen_ID_params       : 45
seen_ID_var          : 10 11 27
seen_commaAccesingExpresion : 14
seen_comma_params_fCall : 116 117
seen_comparacion     : 64 65 65
seen_else            : 87
seen_endArrayAccesing : 12
seen_end_condicion   : 87 88
seen_end_declaration : 7 8
seen_end_paramsFCall : 113
seen_end_program     : 37
seen_end_while       : 109
seen_equals          : 61
seen_expresion_array : 13 14
seen_extra_dimension_array : 20
seen_fCall_id        : 113
seen_factor          : 82 83
seen_final_asignacion : 61
seen_function_end    : 34
seen_function_main   : 37
seen_id_function     : 34
seen_initArrayAccesing : 12
seen_insert_fondo    : 94
seen_lBracket_array  : 11
seen_leftp_fCall     : 113
seen_lim_inf         : 19 20
seen_lim_sup         : 19 20
seen_operador        : 66 67 68 69 70 80 81 84 85
seen_parameter_fCall : 116 117
seen_params_init     : 43
seen_print_cuadruplo : 75 76
seen_program         : 1
seen_rBracket_array  : 11
seen_remove_fondo    : 94
seen_return_function : 50
seen_right_parentheses_condicion : 86
seen_right_parentheses_while : 109
seen_rightp_fCall    : 113
seen_start_bloqueaux : 49
seen_termino         : 78 79
seen_tipo            : 30 31 32
seen_vars            : 5
seen_void            : 41
seen_while           : 109
termino              : 78 79 84 85
terminoaux           : 83
tipo                 : 5 40 45
varcte               : 61 93
vars                 : 1 5 49
varsAuxDeclaration   : 5 7
varsaux              : 27
while                : 59

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . PROGRAMA ID seen_program SEMICOLON vars modulesaux functionmain

    PROGRAMA        shift and go to state 2

    calc                           shift and go to state 1

state 1

    (0) S' -> calc .



state 2

    (1) calc -> PROGRAMA . ID seen_program SEMICOLON vars modulesaux functionmain

    ID              shift and go to state 3


state 3

    (1) calc -> PROGRAMA ID . seen_program SEMICOLON vars modulesaux functionmain
    (4) seen_program -> .

    SEMICOLON       reduce using rule 4 (seen_program -> .)

    seen_program                   shift and go to state 4

state 4

    (1) calc -> PROGRAMA ID seen_program . SEMICOLON vars modulesaux functionmain

    SEMICOLON       shift and go to state 5


state 5

    (1) calc -> PROGRAMA ID seen_program SEMICOLON . vars modulesaux functionmain
    (5) vars -> . VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars
    (6) vars -> . empty
    (122) empty -> .

    VAR             shift and go to state 7
    FUNCTION        reduce using rule 122 (empty -> .)
    MAIN            reduce using rule 122 (empty -> .)

    vars                           shift and go to state 6
    empty                          shift and go to state 8

state 6

    (1) calc -> PROGRAMA ID seen_program SEMICOLON vars . modulesaux functionmain
    (2) modulesaux -> . function modulesaux
    (3) modulesaux -> .
    (34) function -> . FUNCTION returnfunctionaux ID seen_id_function params bloque seen_function_end

    MAIN            reduce using rule 3 (modulesaux -> .)
    FUNCTION        shift and go to state 11

    modulesaux                     shift and go to state 9
    function                       shift and go to state 10

state 7

    (5) vars -> VAR . seen_vars tipo varsAuxDeclaration SEMICOLON vars
    (26) seen_vars -> .

    INT             reduce using rule 26 (seen_vars -> .)
    FLOAT           reduce using rule 26 (seen_vars -> .)
    BOOLEAN         reduce using rule 26 (seen_vars -> .)

    seen_vars                      shift and go to state 12

state 8

    (6) vars -> empty .

    FUNCTION        reduce using rule 6 (vars -> empty .)
    MAIN            reduce using rule 6 (vars -> empty .)
    IF              reduce using rule 6 (vars -> empty .)
    PRINT           reduce using rule 6 (vars -> empty .)
    WHILE           reduce using rule 6 (vars -> empty .)
    AT              reduce using rule 6 (vars -> empty .)
    ID              reduce using rule 6 (vars -> empty .)
    INT_CTE         reduce using rule 6 (vars -> empty .)
    FLOAT_CTE       reduce using rule 6 (vars -> empty .)
    RETURN          reduce using rule 6 (vars -> empty .)
    RIGHTBRACE      reduce using rule 6 (vars -> empty .)


state 9

    (1) calc -> PROGRAMA ID seen_program SEMICOLON vars modulesaux . functionmain
    (37) functionmain -> . MAIN seen_function_main LEFTPARENTHESES RIGHTPARENTHESES bloque seen_end_program

    MAIN            shift and go to state 14

    functionmain                   shift and go to state 13

state 10

    (2) modulesaux -> function . modulesaux
    (2) modulesaux -> . function modulesaux
    (3) modulesaux -> .
    (34) function -> . FUNCTION returnfunctionaux ID seen_id_function params bloque seen_function_end

    MAIN            reduce using rule 3 (modulesaux -> .)
    FUNCTION        shift and go to state 11

    function                       shift and go to state 10
    modulesaux                     shift and go to state 15

state 11

    (34) function -> FUNCTION . returnfunctionaux ID seen_id_function params bloque seen_function_end
    (40) returnfunctionaux -> . tipo
    (41) returnfunctionaux -> . VOID seen_void
    (30) tipo -> . INT seen_tipo
    (31) tipo -> . FLOAT seen_tipo
    (32) tipo -> . BOOLEAN seen_tipo

    VOID            shift and go to state 18
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    BOOLEAN         shift and go to state 21

    returnfunctionaux              shift and go to state 16
    tipo                           shift and go to state 17

state 12

    (5) vars -> VAR seen_vars . tipo varsAuxDeclaration SEMICOLON vars
    (30) tipo -> . INT seen_tipo
    (31) tipo -> . FLOAT seen_tipo
    (32) tipo -> . BOOLEAN seen_tipo

    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    BOOLEAN         shift and go to state 21

    tipo                           shift and go to state 22

state 13

    (1) calc -> PROGRAMA ID seen_program SEMICOLON vars modulesaux functionmain .

    $end            reduce using rule 1 (calc -> PROGRAMA ID seen_program SEMICOLON vars modulesaux functionmain .)


state 14

    (37) functionmain -> MAIN . seen_function_main LEFTPARENTHESES RIGHTPARENTHESES bloque seen_end_program
    (39) seen_function_main -> .

    LEFTPARENTHESES reduce using rule 39 (seen_function_main -> .)

    seen_function_main             shift and go to state 23

state 15

    (2) modulesaux -> function modulesaux .

    MAIN            reduce using rule 2 (modulesaux -> function modulesaux .)


state 16

    (34) function -> FUNCTION returnfunctionaux . ID seen_id_function params bloque seen_function_end

    ID              shift and go to state 24


state 17

    (40) returnfunctionaux -> tipo .

    ID              reduce using rule 40 (returnfunctionaux -> tipo .)


state 18

    (41) returnfunctionaux -> VOID . seen_void
    (42) seen_void -> .

    ID              reduce using rule 42 (seen_void -> .)

    seen_void                      shift and go to state 25

state 19

    (30) tipo -> INT . seen_tipo
    (33) seen_tipo -> .

    ID              reduce using rule 33 (seen_tipo -> .)

    seen_tipo                      shift and go to state 26

state 20

    (31) tipo -> FLOAT . seen_tipo
    (33) seen_tipo -> .

    ID              reduce using rule 33 (seen_tipo -> .)

    seen_tipo                      shift and go to state 27

state 21

    (32) tipo -> BOOLEAN . seen_tipo
    (33) seen_tipo -> .

    ID              reduce using rule 33 (seen_tipo -> .)

    seen_tipo                      shift and go to state 28

state 22

    (5) vars -> VAR seen_vars tipo . varsAuxDeclaration SEMICOLON vars
    (7) varsAuxDeclaration -> . idOrArrayDeclaration seen_end_declaration COMMA varsAuxDeclaration
    (8) varsAuxDeclaration -> . idOrArrayDeclaration seen_end_declaration
    (10) idOrArrayDeclaration -> . ID seen_ID_var
    (11) idOrArrayDeclaration -> . ID seen_ID_var LEFTBRACKET seen_lBracket_array arrayDimesionAux RIGHTBRACKET seen_rBracket_array

    ID              shift and go to state 31

    varsAuxDeclaration             shift and go to state 29
    idOrArrayDeclaration           shift and go to state 30

state 23

    (37) functionmain -> MAIN seen_function_main . LEFTPARENTHESES RIGHTPARENTHESES bloque seen_end_program

    LEFTPARENTHESES shift and go to state 32


state 24

    (34) function -> FUNCTION returnfunctionaux ID . seen_id_function params bloque seen_function_end
    (35) seen_id_function -> .

    LEFTPARENTHESES reduce using rule 35 (seen_id_function -> .)

    seen_id_function               shift and go to state 33

state 25

    (41) returnfunctionaux -> VOID seen_void .

    ID              reduce using rule 41 (returnfunctionaux -> VOID seen_void .)


state 26

    (30) tipo -> INT seen_tipo .

    ID              reduce using rule 30 (tipo -> INT seen_tipo .)


state 27

    (31) tipo -> FLOAT seen_tipo .

    ID              reduce using rule 31 (tipo -> FLOAT seen_tipo .)


state 28

    (32) tipo -> BOOLEAN seen_tipo .

    ID              reduce using rule 32 (tipo -> BOOLEAN seen_tipo .)


state 29

    (5) vars -> VAR seen_vars tipo varsAuxDeclaration . SEMICOLON vars

    SEMICOLON       shift and go to state 34


state 30

    (7) varsAuxDeclaration -> idOrArrayDeclaration . seen_end_declaration COMMA varsAuxDeclaration
    (8) varsAuxDeclaration -> idOrArrayDeclaration . seen_end_declaration
    (9) seen_end_declaration -> .

    COMMA           reduce using rule 9 (seen_end_declaration -> .)
    SEMICOLON       reduce using rule 9 (seen_end_declaration -> .)

    seen_end_declaration           shift and go to state 35

state 31

    (10) idOrArrayDeclaration -> ID . seen_ID_var
    (11) idOrArrayDeclaration -> ID . seen_ID_var LEFTBRACKET seen_lBracket_array arrayDimesionAux RIGHTBRACKET seen_rBracket_array
    (29) seen_ID_var -> .

    LEFTBRACKET     reduce using rule 29 (seen_ID_var -> .)
    COMMA           reduce using rule 29 (seen_ID_var -> .)
    SEMICOLON       reduce using rule 29 (seen_ID_var -> .)

    seen_ID_var                    shift and go to state 36

state 32

    (37) functionmain -> MAIN seen_function_main LEFTPARENTHESES . RIGHTPARENTHESES bloque seen_end_program

    RIGHTPARENTHESES shift and go to state 37


state 33

    (34) function -> FUNCTION returnfunctionaux ID seen_id_function . params bloque seen_function_end
    (43) params -> . LEFTPARENTHESES seen_params_init paramsaux RIGHTPARENTHESES

    LEFTPARENTHESES shift and go to state 39

    params                         shift and go to state 38

state 34

    (5) vars -> VAR seen_vars tipo varsAuxDeclaration SEMICOLON . vars
    (5) vars -> . VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars
    (6) vars -> . empty
    (122) empty -> .

    VAR             shift and go to state 7
    FUNCTION        reduce using rule 122 (empty -> .)
    MAIN            reduce using rule 122 (empty -> .)
    IF              reduce using rule 122 (empty -> .)
    PRINT           reduce using rule 122 (empty -> .)
    WHILE           reduce using rule 122 (empty -> .)
    AT              reduce using rule 122 (empty -> .)
    ID              reduce using rule 122 (empty -> .)
    INT_CTE         reduce using rule 122 (empty -> .)
    FLOAT_CTE       reduce using rule 122 (empty -> .)
    RETURN          reduce using rule 122 (empty -> .)
    RIGHTBRACE      reduce using rule 122 (empty -> .)

    vars                           shift and go to state 40
    empty                          shift and go to state 8

state 35

    (7) varsAuxDeclaration -> idOrArrayDeclaration seen_end_declaration . COMMA varsAuxDeclaration
    (8) varsAuxDeclaration -> idOrArrayDeclaration seen_end_declaration .

    COMMA           shift and go to state 41
    SEMICOLON       reduce using rule 8 (varsAuxDeclaration -> idOrArrayDeclaration seen_end_declaration .)


state 36

    (10) idOrArrayDeclaration -> ID seen_ID_var .
    (11) idOrArrayDeclaration -> ID seen_ID_var . LEFTBRACKET seen_lBracket_array arrayDimesionAux RIGHTBRACKET seen_rBracket_array

    COMMA           reduce using rule 10 (idOrArrayDeclaration -> ID seen_ID_var .)
    SEMICOLON       reduce using rule 10 (idOrArrayDeclaration -> ID seen_ID_var .)
    LEFTBRACKET     shift and go to state 42


state 37

    (37) functionmain -> MAIN seen_function_main LEFTPARENTHESES RIGHTPARENTHESES . bloque seen_end_program
    (49) bloque -> . LEFTBRACE seen_start_bloqueaux vars bloqueaux returnaux RIGHTBRACE

    LEFTBRACE       shift and go to state 44

    bloque                         shift and go to state 43

state 38

    (34) function -> FUNCTION returnfunctionaux ID seen_id_function params . bloque seen_function_end
    (49) bloque -> . LEFTBRACE seen_start_bloqueaux vars bloqueaux returnaux RIGHTBRACE

    LEFTBRACE       shift and go to state 44

    bloque                         shift and go to state 45

state 39

    (43) params -> LEFTPARENTHESES . seen_params_init paramsaux RIGHTPARENTHESES
    (44) seen_params_init -> .

    COMMA           reduce using rule 44 (seen_params_init -> .)
    INT             reduce using rule 44 (seen_params_init -> .)
    FLOAT           reduce using rule 44 (seen_params_init -> .)
    BOOLEAN         reduce using rule 44 (seen_params_init -> .)
    RIGHTPARENTHESES reduce using rule 44 (seen_params_init -> .)

    seen_params_init               shift and go to state 46

state 40

    (5) vars -> VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars .

    FUNCTION        reduce using rule 5 (vars -> VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars .)
    MAIN            reduce using rule 5 (vars -> VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars .)
    IF              reduce using rule 5 (vars -> VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars .)
    PRINT           reduce using rule 5 (vars -> VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars .)
    WHILE           reduce using rule 5 (vars -> VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars .)
    AT              reduce using rule 5 (vars -> VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars .)
    ID              reduce using rule 5 (vars -> VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars .)
    INT_CTE         reduce using rule 5 (vars -> VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars .)
    FLOAT_CTE       reduce using rule 5 (vars -> VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars .)
    RETURN          reduce using rule 5 (vars -> VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars .)
    RIGHTBRACE      reduce using rule 5 (vars -> VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars .)


state 41

    (7) varsAuxDeclaration -> idOrArrayDeclaration seen_end_declaration COMMA . varsAuxDeclaration
    (7) varsAuxDeclaration -> . idOrArrayDeclaration seen_end_declaration COMMA varsAuxDeclaration
    (8) varsAuxDeclaration -> . idOrArrayDeclaration seen_end_declaration
    (10) idOrArrayDeclaration -> . ID seen_ID_var
    (11) idOrArrayDeclaration -> . ID seen_ID_var LEFTBRACKET seen_lBracket_array arrayDimesionAux RIGHTBRACKET seen_rBracket_array

    ID              shift and go to state 31

    idOrArrayDeclaration           shift and go to state 30
    varsAuxDeclaration             shift and go to state 47

state 42

    (11) idOrArrayDeclaration -> ID seen_ID_var LEFTBRACKET . seen_lBracket_array arrayDimesionAux RIGHTBRACKET seen_rBracket_array
    (24) seen_lBracket_array -> .

    INT_CTE         reduce using rule 24 (seen_lBracket_array -> .)

    seen_lBracket_array            shift and go to state 48

state 43

    (37) functionmain -> MAIN seen_function_main LEFTPARENTHESES RIGHTPARENTHESES bloque . seen_end_program
    (38) seen_end_program -> .

    $end            reduce using rule 38 (seen_end_program -> .)

    seen_end_program               shift and go to state 49

state 44

    (49) bloque -> LEFTBRACE . seen_start_bloqueaux vars bloqueaux returnaux RIGHTBRACE
    (53) seen_start_bloqueaux -> .

    VAR             reduce using rule 53 (seen_start_bloqueaux -> .)
    IF              reduce using rule 53 (seen_start_bloqueaux -> .)
    PRINT           reduce using rule 53 (seen_start_bloqueaux -> .)
    WHILE           reduce using rule 53 (seen_start_bloqueaux -> .)
    AT              reduce using rule 53 (seen_start_bloqueaux -> .)
    ID              reduce using rule 53 (seen_start_bloqueaux -> .)
    INT_CTE         reduce using rule 53 (seen_start_bloqueaux -> .)
    FLOAT_CTE       reduce using rule 53 (seen_start_bloqueaux -> .)
    RETURN          reduce using rule 53 (seen_start_bloqueaux -> .)
    RIGHTBRACE      reduce using rule 53 (seen_start_bloqueaux -> .)

    seen_start_bloqueaux           shift and go to state 50

state 45

    (34) function -> FUNCTION returnfunctionaux ID seen_id_function params bloque . seen_function_end
    (36) seen_function_end -> .

    FUNCTION        reduce using rule 36 (seen_function_end -> .)
    MAIN            reduce using rule 36 (seen_function_end -> .)

    seen_function_end              shift and go to state 51

state 46

    (43) params -> LEFTPARENTHESES seen_params_init . paramsaux RIGHTPARENTHESES
    (45) paramsaux -> . tipo ID seen_ID_params paramsaux
    (46) paramsaux -> . COMMA paramsaux
    (47) paramsaux -> . empty
    (30) tipo -> . INT seen_tipo
    (31) tipo -> . FLOAT seen_tipo
    (32) tipo -> . BOOLEAN seen_tipo
    (122) empty -> .

    COMMA           shift and go to state 54
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    BOOLEAN         shift and go to state 21
    RIGHTPARENTHESES reduce using rule 122 (empty -> .)

    paramsaux                      shift and go to state 52
    tipo                           shift and go to state 53
    empty                          shift and go to state 55

state 47

    (7) varsAuxDeclaration -> idOrArrayDeclaration seen_end_declaration COMMA varsAuxDeclaration .

    SEMICOLON       reduce using rule 7 (varsAuxDeclaration -> idOrArrayDeclaration seen_end_declaration COMMA varsAuxDeclaration .)


state 48

    (11) idOrArrayDeclaration -> ID seen_ID_var LEFTBRACKET seen_lBracket_array . arrayDimesionAux RIGHTBRACKET seen_rBracket_array
    (19) arrayDimesionAux -> . INT_CTE seen_lim_inf INT_CTE seen_lim_sup
    (20) arrayDimesionAux -> . INT_CTE seen_lim_inf INT_CTE seen_lim_sup COMMA seen_extra_dimension_array arrayDimesionAux

    INT_CTE         shift and go to state 57

    arrayDimesionAux               shift and go to state 56

state 49

    (37) functionmain -> MAIN seen_function_main LEFTPARENTHESES RIGHTPARENTHESES bloque seen_end_program .

    $end            reduce using rule 37 (functionmain -> MAIN seen_function_main LEFTPARENTHESES RIGHTPARENTHESES bloque seen_end_program .)


state 50

    (49) bloque -> LEFTBRACE seen_start_bloqueaux . vars bloqueaux returnaux RIGHTBRACE
    (5) vars -> . VAR seen_vars tipo varsAuxDeclaration SEMICOLON vars
    (6) vars -> . empty
    (122) empty -> .

    VAR             shift and go to state 7
    IF              reduce using rule 122 (empty -> .)
    PRINT           reduce using rule 122 (empty -> .)
    WHILE           reduce using rule 122 (empty -> .)
    AT              reduce using rule 122 (empty -> .)
    ID              reduce using rule 122 (empty -> .)
    INT_CTE         reduce using rule 122 (empty -> .)
    FLOAT_CTE       reduce using rule 122 (empty -> .)
    RETURN          reduce using rule 122 (empty -> .)
    RIGHTBRACE      reduce using rule 122 (empty -> .)

    vars                           shift and go to state 58
    empty                          shift and go to state 8

state 51

    (34) function -> FUNCTION returnfunctionaux ID seen_id_function params bloque seen_function_end .

    FUNCTION        reduce using rule 34 (function -> FUNCTION returnfunctionaux ID seen_id_function params bloque seen_function_end .)
    MAIN            reduce using rule 34 (function -> FUNCTION returnfunctionaux ID seen_id_function params bloque seen_function_end .)


state 52

    (43) params -> LEFTPARENTHESES seen_params_init paramsaux . RIGHTPARENTHESES

    RIGHTPARENTHESES shift and go to state 59


state 53

    (45) paramsaux -> tipo . ID seen_ID_params paramsaux

    ID              shift and go to state 60


state 54

    (46) paramsaux -> COMMA . paramsaux
    (45) paramsaux -> . tipo ID seen_ID_params paramsaux
    (46) paramsaux -> . COMMA paramsaux
    (47) paramsaux -> . empty
    (30) tipo -> . INT seen_tipo
    (31) tipo -> . FLOAT seen_tipo
    (32) tipo -> . BOOLEAN seen_tipo
    (122) empty -> .

    COMMA           shift and go to state 54
    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    BOOLEAN         shift and go to state 21
    RIGHTPARENTHESES reduce using rule 122 (empty -> .)

    paramsaux                      shift and go to state 61
    tipo                           shift and go to state 53
    empty                          shift and go to state 55

state 55

    (47) paramsaux -> empty .

    RIGHTPARENTHESES reduce using rule 47 (paramsaux -> empty .)


state 56

    (11) idOrArrayDeclaration -> ID seen_ID_var LEFTBRACKET seen_lBracket_array arrayDimesionAux . RIGHTBRACKET seen_rBracket_array

    RIGHTBRACKET    shift and go to state 62


state 57

    (19) arrayDimesionAux -> INT_CTE . seen_lim_inf INT_CTE seen_lim_sup
    (20) arrayDimesionAux -> INT_CTE . seen_lim_inf INT_CTE seen_lim_sup COMMA seen_extra_dimension_array arrayDimesionAux
    (22) seen_lim_inf -> .

    INT_CTE         reduce using rule 22 (seen_lim_inf -> .)

    seen_lim_inf                   shift and go to state 63

state 58
